{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 3,
  "lineage": "7b82b436-9fa6-204d-16f8-207366603b5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "get_data_from_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:security-group/sg-02347aec9c8474a34",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02347aec9c8474a34",
            "ingress": [],
            "name": "Team2_gets_data_from_s3",
            "name_prefix": "",
            "owner_id": "024848450401",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002f5cdebf806dd0b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.184.190.157/32"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-456203620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02347aec9c8474a34",
            "security_group_rule_id": "sgr-0c6bd268c7a324c66",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.get_data_from_s3",
            "data.terraform_remote_state.s3"
          ]
        }
      ]
    }
  ]
}